# mem0-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main_with_cors.py  n8n_integration_guide.md  pyproject.toml  requirements.txt  run.sh  start_ngrok.sh
src/: app.py
